--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.0",
+    "multiparty": "^4.2.3",
     "nodemailer": "^6.9.7",
     "qrcode": "^1.5.4",
     "uuid": "^9.0.1"
