--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multiparty": "^4.2.3",
     "nodemailer": "^6.9.7",
     "qrcode": "^1.5.4",
+    "sharp": "^0.34.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
