--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     },
     {
       "src": "/",
-      "dest": "/index.html"
+      "dest": "/public/promotions.html"
     },
     {
       "src": "/(.*)",
