--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon server/index.js",
     "seed": "node server/seed.js",
     "seed:prod": "NODE_ENV=production node server/seed.js",
+    "reset:clean": "node reset_db_clean.js",
+    "reset-test": "node reset_test_data.js",
     "test": "jest",
     "lint": "eslint server/**/*.js"
   },
