--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "version": 2,
+  "redirects": [
+    {
+      "source": "/public/organization-dashboard.html",
+      "destination": "/public/dashboard.html",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
