--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "buildCommand": null,
+  "devCommand": null,
+  "installCommand": "npm install",
   "redirects": [
     {
       "source": "/public/organization-dashboard.html",
@@ -11,6 +14,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/$1"
+    },
+    {
+      "source": "/promo/:slug",
+      "destination": "/public/promo-landing.html"
     },
     {
       "source": "/page/([^/]+)",
